--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
                                 </div>
                             </div>                            
                             <div class="portfolio-card__card-description">
-                                <h2 class="portfolio-card__title title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                <h2 class="portfolio-card__title title">Постер <span lang="en">New Orlean vs gold star </span></h2>
                                 <p class="portfolio-card__text">Дизайн</p>
                             </div>
                         </a>                                               
